--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head><link rel="stylesheet" href="styles.css"></head>
 <body>
-    <h1>Hello World</h1>
-        <p style="color:bisque">I'm hosted with GitHub Pages.</p>
+    <h1>Hi there, I'm</h1>
+        <h2>Lindsay Mark</h2>
 </body>
 </html>
