--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head><link rel="stylesheet" href="styles.css"></head>
 <body>
-    <h1>Hi there, I'm</h1>
-        <h2>Lindsay Mark</h2>
+    <h2>Lindsay Mark</h2>
+    <h2>computer science & business<br/>double degree student</h2>
 </body>
 </html>
