--- a/index.html
+++ b/index.html
@@ -4,5 +4,6 @@
 <body>
     <h1>Lindsay Mark</h1>
     <h2>computer science & business<br/>double degree student</h2>
+    <div class="square"></div>
 </body>
 </html>
