--- a/index.html
+++ b/index.html
@@ -1,9 +1,20 @@
 <!DOCTYPE html>
 <html>
-    <head><link rel="stylesheet" href="styles.css"></head>
+    <head><link rel="stylesheet" href="styles.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <style>
+            .rectangle {
+            height: 50px;
+            width: 100px;
+            background-color: #555;
+            }
+        </style>
+    
+    
+    </head>
 <body>
     <h1>Lindsay Mark</h1>
     <h2>computer science & business<br/>double degree student</h2>
-    <div class="square"></div>
+    <div class="rectangle"></div>
 </body>
 </html>
