--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html>
     <head><link rel="stylesheet" href="styles.css"></head>
 <body>
-    <h1>Lindsay Mark</h1>
-    <h2>computer science & business<br/>double degree student</h2>
-    <div class="rectangle"></div>
+    <div class="rectangle">
+        <h1>Lindsay Mark</h1>
+        <h2>computer science & business<br/>double degree student</h2>
+    </div>
 </body>
 </html>
