--- a/index.html
+++ b/index.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
 <html>
-    <head><link rel="stylesheet" href="styles.css"></head>
+<title>Lindsay Mark</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+
+<link rel="stylesheet" href="styles.css">
+
 <body>
     <div class="rectangle">
         <h1>Lindsay Mark</h1>
         <h2>computer science & business<br/>double degree student</h2>
     </div>
 </body>
+
 </html>
